# zora-notifier

./: .env.example  .gitignore  Cargo.toml  README.MD
src/: api.rs  bot.rs  ethereum.rs  main.rs  models.rs  web.rs
